objects/Audit_Trail_Event__mdt.object
<CustomObject>
    <fields>
        <fullName>Diagnostic_Audit_Trail__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Diagnostic Audit Trail</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Event_Description__c</fullName>
        <label>Event Description</label>
        <length>6000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Event_Type__c</fullName>
        <description>Audit Trail Event Types for Diagnostic and Repair</description>
        <label>Event Type</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Added failure</fullName>
                </value>
                <value>
                    <fullName>Campaign or TRP viewed</fullName>
                </value>
                <value>
                    <fullName>Changed Failure</fullName>
                </value>
                <value>
                    <fullName>Comments on Field Actions</fullName>
                </value>
                <value>
                    <fullName>Diagnostic Tool Launch</fullName>
                </value>
                <value>
                    <fullName>Faults received from Diagnostic Tool</fullName>
                </value>
                <value>
                    <fullName>Performed Repair</fullName>
                </value>
                <value>
                    <fullName>Performed Solution</fullName>
                </value>
                <value>
                    <fullName>Procedure was viewed</fullName>
                </value>
                <value>
                    <fullName>Search results or Solution Count</fullName>
                </value>
                <value>
                    <fullName>Select</fullName>
                    <default>true</default>
                    <label>Select</label>
                </value>
                <value>
                    <fullName>Selected root cause on Repair</fullName>
                </value>
                <value>
                    <fullName>Selected root cause on T&amp;D</fullName>
                </value>
                <value>
                    <fullName>Supervisor checked if need review/perform</fullName>
                </value>
                <value>
                    <fullName>Technician checked if performed checkbox</fullName>
                </value>
                <value>
                    <fullName>Technician checked if reviewed checkbox</fullName>
                </value>
                <value>
                    <fullName>TSB is viewed</fullName>
                </value>
                <value>
                    <fullName>User searched faults or symptoms</fullName>
                </value>
                <value>
                    <fullName>User selected Access SRT Details</fullName>
                </value>
                <value>
                    <fullName>User viewed FC Overview</fullName>
                </value>
                <value>
                    <fullName>Verified solution</fullName>
                </value>
                <value>
                    <fullName>Viewed solution on Repair</fullName>
                </value>
                <value>
                    <fullName>Viewed solution on T&amp;D</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Object_Name__c</fullName>
        <label>Object Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Prepopulate_the_Date__c</fullName>
        <defaultValue>Today()</defaultValue>
        <label>Prepopulate the Date</label>
        <type>Date</type>
    </fields>
    <label>FSL Audit Trail Event</label>
    <listViews>
        <fullName>Audit_Trail_View</fullName>
        <columns>MasterLabel</columns>
        <columns>Event_Type__c</columns>
        <columns>Event_Description__c</columns>
        <columns>Diagnostic_Audit_Trail__c</columns>
        <columns>Object_Name__c</columns>
        <filterScope>Everything</filterScope>
        <label>Audit Trail View</label>
        <language>en_US</language>
    </listViews>
    <pluralLabel>FSL Audit Trail Events</pluralLabel>
</CustomObject>